push add simlator inquiry mpan
